# self_balancing_robot

./: .gitignore
src/sbr_bringup/: CMakeLists.txt  package.xml
src/sbr_bringup/config/: gz_bridge_ros2_control.yaml  ros2_control.yaml
src/sbr_bringup/launch/: sbr_control.launch.xml  sbr_gz_ros2_control.launch.xml
src/sbr_controls/: package.xml  setup.cfg  setup.py
src/sbr_controls/sbr_controls/: balance_control.py  clamp.py  sbr_teleop_keyboard.py  state_observer.py
src/sbr_description/: CMakeLists.txt  package.xml
src/sbr_description/launch/: display.launch.xml
src/sbr_description/rviz/: default_config.rviz
src/sbr_description/urdf/: common_properties.xacro  imu.xacro  materials.xacro  ros2_control.xacro  sbr.urdf.xacro  sbr_base.xacro  sbr_gz_ros2_control.urdf.xacro
src/sbr_interfaces/: CMakeLists.txt  package.xml
src/sbr_interfaces/msg/: RobotState.msg
